# zodi-parameter-estimation

./: README.md  pyproject.toml
notebooks/hogg-exercises/: chapter1.ipynb  emissivities.ipynb
notebooks/hogg-exercises/data/: table1.txt
